# SPK2

./: CMakeLists.txt  README.md  compute_intersection.c  compute_intersection.h  gaus_elimination.c  gaus_elimination.h  lattice_functions.c  lattice_functions.h  main.c  main2.c  math_functions.c  math_functions.h  old_main.c  parameters.h  print_functions.c  print_functions.h
src/: CMakeLists.txt  HNF.c  HNF.h  compute_intersection.c  compute_intersection.h  crypto_functions.c  crypto_functions.h  gateway.c  gateway.h  gaus_elimination.c  gaus_elimination.h  lattice_functions.c  lattice_functions.h  math_functions.c  math_functions.h  other_functions.c  other_functions.h  parameters.h  print_functions.c  print_functions.h  public_to_private.c  public_to_private.h  quality.c  quality.h  random.c  random.h  sensor.c  sensor.h
test/: CMakeLists.txt  doctest.h  math_functions_test.cpp
unused_code/: HNF.c
